# comm-ai-agent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: config.py  depends.py  errors.py  main.py  models.py  utils.py
app/agents/: car_catalog.py  financial_plan.py  graph_definition.py  models.py  offer_value.py  orchestrator.py
data/: company_info.md
tests/: conftest.py  test_car_catalog.py  test_financial_plan.py  test_offer_value.py  test_orchestrator.py
